--- a/index.html
+++ b/index.html
@@ -4,37 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css">
     <title>first microverse project</title>
-    <style>
-      .navigation {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0.5rem 2rem;
-      }
-
-      .logo {
-        width: 80px;
-        height: 40px;
-      }
-
-      .list {
-        display: flex;
-        list-style: none;
-      }
-
-      .item {
-        width: 40px;
-        height: 40px;
-        margin-left: 1.5rem;
-        color: black;
-        font-size: 1.1rem;
-        padding: 0.5rem;
-      }
-      .header {
-        height: 100vh;
-      }
-    </style>
+ 
   </head>
   <body>
     <header class="header">
@@ -131,6 +103,10 @@
           </svg>
         </div>
       </nav>
+      <lu id="search-box">
+          <li><form action="" ><input type="text" name="" id=""></form></li>
+          <li> <button id="search-button"> search</button></li>
+      </lu>
       <ul class="list">
         <li class="item">
           <svg
@@ -185,5 +161,8 @@
         </li>
       </ul>
     </header>
+    <main>
+        <iframe id="main-video" src="https://www.youtube.com/embed/V74l_zS1x8E" width="420" height="315"></iframe>
+    </main>
   </body>
 </html>
