--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <title>first microverse project</title>
- 
   </head>
   <body>
     <header class="header">
@@ -103,10 +102,12 @@
           </svg>
         </div>
       </nav>
-      <lu id="search-box">
-          <li><form action="" ><input type="text" name="" id=""></form></li>
-          <li> <button id="search-button"> search</button></li>
-      </lu>
+      <ul id="search-box">
+        <li>
+          <form action=""><input type="text" name="" id="" /></form>
+        </li>
+        <li><button id="search-button">search</button></li>
+      </ul>
       <ul class="list">
         <li class="item">
           <svg
@@ -160,9 +161,15 @@
           SIGN IN
         </li>
       </ul>
+      <div class="header-box">
+        <iframe
+          id="main-video"
+          src="https://www.youtube.com/embed/V74l_zS1x8E"
+          width="420"
+          height="315"
+        ></iframe>
+        <h1 class="header-title">Contributing to Open-Source</h1>
+      </div>
     </header>
-    <main>
-        <iframe id="main-video" src="https://www.youtube.com/embed/V74l_zS1x8E" width="420" height="315"></iframe>
-    </main>
   </body>
 </html>
