added the embedded video list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>first microverse project</title>
   </head>
   <body>
+      <!-- begining of the header -->
     <header class="header">
+        <!-- hamburguer logo -->
       <nav class="navigation">
         <div class="logo">
           <svg
@@ -102,7 +104,8 @@
           </svg>
         </div>
       </nav>
-      <ul id="search-box">
+      <!-- list of elements inside the header (the search-box and the menu-icon -->
+      <ul id="search-box__menu-icon">
         <li>
           <form action=""><input type="text" name="" id="" /></form>
         </li>
@@ -174,8 +177,7 @@
         <div class="video-options">
           <ul id="list-of-video-features">
             <li class="icon-buttons">
-              <span
-                ><svg
+                <svg
                   viewBox="0 0 24 24"
                   preserveAspectRatio="xMidYMid meet"
                   focusable="false"
@@ -187,8 +189,7 @@
                       d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-1.91l-.01-.01L23 10z"
                       class="style-scope yt-icon"
                     ></path>
-                  </g></svg
-              ></span>
+                  </g></svg>
             </li>
             <li><p>371</p></li>
             <li class="icon-buttons">
@@ -205,8 +206,7 @@
                       d="M15 3H6c-.83 0-1.54.5-1.84 1.22l-3.02 7.05c-.09.23-.14.47-.14.73v1.91l.01.01L1 14c0 1.1.9 2 2 2h6.31l-.95 4.57-.03.32c0 .41.17.79.44 1.06L9.83 23l6.59-6.59c.36-.36.58-.86.58-1.41V5c0-1.1-.9-2-2-2zm4 0v12h4V3h-4z"
                       class="style-scope yt-icon"
                     ></path>
-                  </g></svg
-              ></span>
+                  </g></svg></span>
             </li>
             <li><p>14</p></li>
             <li class="icon-buttons">
@@ -223,8 +223,7 @@
                       d="M14 9V5l7 7-7 7v-4.1c-5 0-8.5 1.6-11 5.1 1-5 4-10 11-11z"
                       class="style-scope yt-icon"
                     ></path>
-                  </g></svg
-              ></span>
+                  </g></svg></span>
             </li>
             <li><p>Share</p></li>
           </ul>
@@ -242,6 +241,15 @@
           <div class="user__name">User name</div>
         </div>
       </div>
+      <aside >
+          <ul class="related-videos">
+              <li class="embedded-videos"><iframe src="https://archive.fo/o/Bss88/https://www.youtube.com/watch?v=mENDYhfxH-o" frameborder="0"></iframe></li>
+              <li class="embedded-videos"><iframe src="https://archive.fo/o/Bss88/https://www.youtube.com/watch?v=YJZCUhxNCv8" frameborder="0"></iframe></li>
+              <li class="embedded-videos"><iframe src="https://archive.fo/o/Bss88/https://www.youtube.com/watch?v=cwDqjmSmtMQ" frameborder="0"></iframe></li>
+              <li class="embedded-videos"><iframe src="https://archive.fo/o/Bss88/https://www.youtube.com/watch?v=7YcW25PHnAA" frameborder="0"></iframe></li>
+              <li class="embedded-videos"><iframe src="https://archive.fo/o/Bss88/https://www.youtube.com/watch?v=UEb1cvZG3GU" frameborder="0"></iframe></li>
+          </ul>
+      </aside>
     </header>
   </body>
 </html>
