Added the sample title

--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
+            <h4>Title here</h4>
           </li>
           <li class="embedded-videos">
             <iframe
@@ -265,6 +266,7 @@
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
+            <h4>Title here</h4>
           </li>
           <li class="embedded-videos">
             <iframe
@@ -275,6 +277,7 @@
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
+            <h4>Title here</h4>
           </li>
           <li class="embedded-videos">
             <iframe
@@ -285,6 +288,7 @@
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
+            <h4>Title here</h4>
           </li>
           <li class="embedded-videos">
             <iframe
@@ -295,6 +299,7 @@
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
+            <h4>Title here</h4>
           </li>
         </ul>
       </aside>
