added the number of views and spaced the icon buttons below the main video

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="video-options">
           <ul id="list-of-video-features">
             <li class="icon-buttons">
-              <svg
+              <svg class="icon-buttons-svg"
                 viewBox="0 0 24 24"
                 preserveAspectRatio="xMidYMid meet"
                 focusable="false"
@@ -195,7 +195,7 @@
             <li><p>371</p></li>
             <li class="icon-buttons">
               <span
-                ><svg
+                ><svg class="icon-buttons-svg"
                   viewBox="0 0 24 24"
                   preserveAspectRatio="xMidYMid meet"
                   focusable="false"
@@ -212,8 +212,8 @@
             </li>
             <li><p>14</p></li>
             <li class="icon-buttons">
-              <span
-                ><svg
+              <span>
+                  <svg class="icon-buttons-svg"
                   viewBox="0 0 24 24"
                   preserveAspectRatio="xMidYMid meet"
                   focusable="false"
@@ -256,6 +256,7 @@
               allowfullscreen
             ></iframe>
             <h4>Title here</h4>
+            <p>981,543 views</p>          
           </li>
           <li class="embedded-videos">
             <iframe
@@ -267,6 +268,7 @@
               allowfullscreen
             ></iframe>
             <h4>Title here</h4>
+            <p>16,130,993 views</p>
           </li>
           <li class="embedded-videos">
             <iframe
@@ -278,6 +280,7 @@
               allowfullscreen
             ></iframe>
             <h4>Title here</h4>
+            <p>3,580,484 views</p>
           </li>
           <li class="embedded-videos">
             <iframe
@@ -289,6 +292,7 @@
               allowfullscreen
             ></iframe>
             <h4>Title here</h4>
+            <p>444, 634 views</p>
           </li>
           <li class="embedded-videos">
             <iframe
@@ -300,7 +304,8 @@
               allowfullscreen
             ></iframe>
             <h4>Title here</h4>
-          </li>
+            <p>6,269,391 views</p>
+        </li>
         </ul>
       </aside>
     </header>
