Added subscribe button

--- a/index.html
+++ b/index.html
@@ -227,17 +227,23 @@
             <li><p>Share</p></li>
           </ul>
         </div>
-        <div class="user">
-          <div class="user__avatar">
-            <img
-              id="img"
-              class="user__avatar-img"
-              alt=""
-              width="48"
-              src="https://yt3.ggpht.com/a/AGF-l78t4FUhCfUDHOBb9BKh3-Frdcp_byCzYuXKNw=s48-c-k-c0xffffffff-no-rj-mo" />
-          </div>
-          <div class="user__name">User name</div>
+        <div class="user-subscribe">
+            <div class="user">
+                <div class="user__avatar">
+                  <img
+                    id="img"
+                    class="user__avatar-img"
+                    alt=""
+                    width="48"
+                    src="https://yt3.ggpht.com/a/AGF-l78t4FUhCfUDHOBb9BKh3-Frdcp_byCzYuXKNw=s48-c-k-c0xffffffff-no-rj-mo" />
+                </div>
+                <div class="user__name">User name</div>
+              </div>
+              <div class="subscribe-button">
+                <a type="button" class="subscribe-btn">SUBSCRIBE</a>
+              </div>
         </div>
+        
       </div>
     </main>
       <!-- Sidebar Recommended videos-->
