--- a/index.html
+++ b/index.html
@@ -177,7 +177,6 @@
           <ul id="list-of-video-features">
             <li class="icon-buttons">
               <svg
-                
                 focusable="false"
                 class="style-scope yt-icon"
                 style="pointer-events: none; display: block; width: 100%; height: 100%;"
@@ -193,8 +192,7 @@
             <li><p>371</p></li>
             <li class="icon-buttons">
               <span
-                ><svg
-                
+                ><svg                
                   focusable="false"
                   class="style-scope yt-icon"
                   style="pointer-events: none; display: block; width: 100%; height: 100%;"
@@ -204,8 +202,8 @@
                       d="M15 3H6c-.83 0-1.54.5-1.84 1.22l-3.02 7.05c-.09.23-.14.47-.14.73v1.91l.01.01L1 14c0 1.1.9 2 2 2h6.31l-.95 4.57-.03.32c0 .41.17.79.44 1.06L9.83 23l6.59-6.59c.36-.36.58-.86.58-1.41V5c0-1.1-.9-2-2-2zm4 0v12h4V3h-4z"
                       class="style-scope yt-icon"
                     ></path>
-                  </g></svg
-              ></span>
+                  </g></svg>
+              </span>
             </li>
             <li><p>14</p></li>
             <li class="icon-buttons">
