--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- hamburguer logo -->
       <nav class="navigation">
         <div class="logo">
-          <img src="./img/youtube.png" style="width:80px;height:80px;" />
+          <img src="./img/youtube.png" />
         </div>
       </nav>
       <!-- list of elements inside the header (the search-box and the menu-icon -->
@@ -28,8 +28,7 @@
           <svg
             
             focusable="false"
-            class="style-scope yt-icon"
-            style="pointer-events: none; display: block; width: 100%; height: 100%;"
+            class="style-scope yt-icon"            
           >
             <g class="style-scope yt-icon">
               <path
@@ -42,8 +41,7 @@
         <li class="item">
           <svg            
             focusable="false"
-            class="style-scope yt-icon"
-            style="pointer-events: none; display: block; width: 100%; height: 100%;"
+            class="style-scope yt-icon"            
           >
             <g class="style-scope yt-icon">
               <path
@@ -56,8 +54,7 @@
         <li class="item">
           <svg           
             focusable="false"
-            class="style-scope yt-icon"
-            style="pointer-events: none; display: block; width: 100%; height: 100%;"
+            class="style-scope yt-icon"            
           >
             <g class="style-scope yt-icon">
               <path
@@ -92,8 +89,7 @@
                 <li class="icon-buttons">
                   <svg
                     focusable="false"
-                    class="style-scope yt-icon"
-                    style="pointer-events: none; display: block; width: 100%; height: 100%;"
+                    class="style-scope yt-icon"                    
                   >
                     <g class="style-scope yt-icon">
                       <path
@@ -107,8 +103,7 @@
                 <li class="icon-buttons">
                   <svg                
                       focusable="false"
-                      class="style-scope yt-icon"
-                      style="pointer-events: none; display: block; width: 100%; height: 100%;"
+                      class="style-scope yt-icon"                      
                     >
                       <g class="style-scope yt-icon">
                         <path
@@ -121,8 +116,7 @@
                 <li class="icon-buttons">
                   <svg                
                       focusable="false"
-                      class="style-scope yt-icon"
-                      style="pointer-events: none; display: block; width: 100%; height: 100%;"
+                      class="style-scope yt-icon"                      
                     >
                       <g class="style-scope yt-icon">
                         <path
