Added alt to image logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- hamburguer logo -->
       <nav class="navigation">
         <div class="logo">
-          <img src="./img/youtube.png" />
+          <img src="./img/youtube.png" alt="logo" />
         </div>
       </nav>
       <!-- list of elements inside the header (the search-box and the menu-icon -->
