deleted inline style

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
           <iframe
             id="main-video"
             src="https://www.youtube.com/embed/V74l_zS1x8E"
-            width="420"
-            height="315"
+          
           ></iframe>
         </div>
         <h3 class="header-title">
@@ -120,8 +119,7 @@
               <img
                 id="img"
                 class="user__avatar-img"
-                alt=""
-                width="48"
+                alt="user-avatar"
                 src="https://yt3.ggpht.com/a/AGF-l78t4FUhCfUDHOBb9BKh3-Frdcp_byCzYuXKNw=s48-c-k-c0xffffffff-no-rj-mo"
               />
             </div>
