Changed the main video size and the icons of the navigation bar to image icons

--- a/index.html
+++ b/index.html
@@ -27,34 +27,25 @@
       </ul>
       <ul class="list">
         <li class="item">
-          <svg focusable="false" class="style-scope yt-icon">
-            <g class="style-scope yt-icon">
-              <path
-                d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4zM14 13h-3v3H9v-3H6v-2h3V8h2v3h3v2z"
-                class="style-scope yt-icon"
-              ></path>
-            </g>
-          </svg>
+          <img
+            class="item__icon-size"
+            src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fwww.shareicon.net%2Fdata%2F512x512%2F2015%2F12%2F18%2F689209_video_512x512.png"
+            alt="Camera"
+          />
         </li>
         <li class="item">
-          <svg focusable="false" class="style-scope yt-icon">
-            <g class="style-scope yt-icon">
-              <path
-                d="M4 8h4V4H4v4zm6 12h4v-4h-4v4zm-6 0h4v-4H4v4zm0-6h4v-4H4v4zm6 0h4v-4h-4v4zm6-10v4h4V4h-4zm-6 4h4V4h-4v4zm6 6h4v-4h-4v4zm0 6h4v-4h-4v4z"
-                class="style-scope yt-icon"
-              ></path>
-            </g>
-          </svg>
+          <img
+            class="item__icon-size"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_TJogByEsmoHegz6mk608e1Qu8-AOKIPetd2cpmRHESojmW1CHg&s"
+            alt="Grid"
+          />
         </li>
         <li class="item">
-          <svg focusable="false" class="style-scope yt-icon">
-            <g class="style-scope yt-icon">
-              <path
-                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
-                class="style-scope yt-icon"
-              ></path>
-            </g>
-          </svg>
+          <img
+            class="item__icon-size"
+            src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_more_vert_48px-512.png"
+            alt="More"
+          />
         </li>
         <li class="item">
           SIGN IN
@@ -67,7 +58,6 @@
           <iframe
             id="main-video"
             src="https://www.youtube.com/embed/V74l_zS1x8E"
-          
           ></iframe>
         </div>
         <h3 class="header-title">
